Mon Oct 25 14:57:45 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* gdbserver/{low-lynx.c,low-sparc.c,low-sun3.c}, standalone.c,
	m3-nat.c, i386m3-nat.c, mipsm3-nat.c, ns32km3-nat.c: bcopy -> memcpy.

	gcc -Wall lint:
	* breakpoint.c: Include thread.h.
	* coffread.c: Include stabsread.h.
	* Makefile.in: Update dependencies.
	* breakpoint.c (mention): Add bp_call_dummy to switch.
	* symmisc.c (dump_symtab): Use %d not %ld for line number.

Sun Oct 24 20:16:38 1993  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* parse.c, parser-defs.h (write_exp_msymbol):  New function to write
	the appropriate expression for a minimal symbol.  Taken from c-exp.y
	and m2-exp.y but handles mst_file_*.
	* c-exp.y, m2-exp.y:  Use it.

Sun Oct 24 09:31:05 1993  Fred Fish  (fnf@lisa.cygnus.com)

	* elfread.c (elf_symtab_read):  Use bfd convention that both
	initialized and uninitialized data sections have the SEC_ALLOC
	flag bit set, but only initialized sections have SEC_LOAD set.
	SEC_DATA is ignored since it only gets set for initialized 
	data.

Sat Oct 23 14:48:18 1993  Doug Evans  (dje@canuck.cygnus.com)

	* remote-sim.h (sim_stop): New enum.
	(sim_stop_signal): Change prototype, result is enum sim_stop.
	* remote-sim.c (gdbsim_wait): Update call to sim_stop_signal.

Fri Oct 22 07:49:54 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* stabsread.c (define_symbol): Skip the whole thing about "pcc
	promotion" on little-endian machines.

	* remote-vx.c (vx_wait): Rename pid parameter to pid_to_wait_for.
	Some compilers (legitimately) don't like variables in the
	function's outermost block whose name is the the same as the name of
	a parameter.

	Merge Apollo patches from Troy Rollo (troy@cbme.unsw.edu.au):
	* dst.h, dstread.c, config/m68k/{apollo68b.mt,tm-apollo68b.h}:
	New files.
	* config/m68k/nm-apollo68b.h: Add more defines.
	* configure.in: Recognize apollo target, not just host.

	* configure.in: Add * to end of all OS names.
